--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,7 +1,9 @@
 [plugin]
 
 name="Godot Table"
-description="A table control which can be sort and select for Godot"
-author="sericaer@outlook.com"
-version="0.2.0"
+description="A table control which can be sort and select for Godot
+updated for Godot 4 and added custom colors
+Original author: sericaer@outlook.com"
+author="https://github.com/EinRainerZufall"
+version="0.3.0"
 script="plugin.gd"
